重构了项目中的部分老旧代码，实现全局状态管理的成员私有，加入了我的课程模块。

--- a/src/public/404/index.html
+++ b/src/public/404/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Title</title>
+  <title>铁思汇</title>
+  <link rel="icon" href="<%= BASE_URL %>favicon.ico">
   <link rel="stylesheet" href="./main.css">
 </head>
 <body>
